{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 558,
  "lineage": "eeea4e4a-f4c5-8e2b-c3b0-fadf8e8faf40",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:638535993362:internet-gateway/igw-007364f488e827d0e",
            "id": "igw-007364f488e827d0e",
            "owner_id": "638535993362",
            "tags": {
              "Name": "eks-igw"
            },
            "tags_all": {
              "Name": "eks-igw"
            },
            "vpc_id": "vpc-0419a6b95d0a30961"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:638535993362:route-table/rtb-0ce5f5f521a30c5c4",
            "id": "rtb-0ce5f5f521a30c5c4",
            "owner_id": "638535993362",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-007364f488e827d0e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-public-rt"
            },
            "tags_all": {
              "Name": "eks-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0419a6b95d0a30961"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07afe4fb690976d53",
            "route_table_id": "rtb-0ce5f5f521a30c5c4",
            "subnet_id": "subnet-07cff59a8645d5416"
          },
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_route_table.eks_public_rt",
            "aws_subnet.eks_public_subnet_a",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3c1dc4a63f12989",
            "route_table_id": "rtb-0ce5f5f521a30c5c4",
            "subnet_id": "subnet-06af8795610b2a96f"
          },
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_route_table.eks_public_rt",
            "aws_subnet.eks_public_subnet_b",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:638535993362:subnet/subnet-07cff59a8645d5416",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07cff59a8645d5416",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "638535993362",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-public-subnet-a"
            },
            "tags_all": {
              "Name": "eks-public-subnet-a"
            },
            "vpc_id": "vpc-0419a6b95d0a30961"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:638535993362:subnet/subnet-06af8795610b2a96f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06af8795610b2a96f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "638535993362",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-public-subnet-b"
            },
            "tags_all": {
              "Name": "eks-public-subnet-b"
            },
            "vpc_id": "vpc-0419a6b95d0a30961"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:638535993362:vpc/vpc-0419a6b95d0a30961",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07f4cbf783bdcbc22",
            "default_route_table_id": "rtb-0a9f1fccc951f0833",
            "default_security_group_id": "sg-0397457ead63ef67d",
            "dhcp_options_id": "dopt-144c3b6e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0419a6b95d0a30961",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a9f1fccc951f0833",
            "owner_id": "638535993362",
            "tags": {
              "Name": "eks-vpc"
            },
            "tags_all": {
              "Name": "eks-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:638535993362:security-group/sg-097117aed2d23512a",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-097117aed2d23512a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07ae1c4e1fba1fc90"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "nginx-eks-cluster-cluster-2025052018254329390000000a",
            "name_prefix": "nginx-eks-cluster-cluster-",
            "owner_id": "638535993362",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "nginx-eks-cluster-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nginx-eks-cluster-cluster",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0419a6b95d0a30961"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:638535993362:security-group/sg-07ae1c4e1fba1fc90",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07ae1c4e1fba1fc90",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-097117aed2d23512a"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-097117aed2d23512a"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-097117aed2d23512a"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-097117aed2d23512a"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-097117aed2d23512a"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-097117aed2d23512a"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "nginx-eks-cluster-node-20250520182543293900000009",
            "name_prefix": "nginx-eks-cluster-node-",
            "owner_id": "638535993362",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "nginx-eks-cluster-node",
              "Terraform": "true",
              "kubernetes.io/cluster/nginx-eks-cluster": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nginx-eks-cluster-node",
              "Terraform": "true",
              "kubernetes.io/cluster/nginx-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0419a6b95d0a30961"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2162583678",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-097117aed2d23512a",
            "security_group_rule_id": "sgr-0e7d0aa5dff79d5be",
            "self": false,
            "source_security_group_id": "sg-07ae1c4e1fba1fc90",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1858525188",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07ae1c4e1fba1fc90",
            "security_group_rule_id": "sgr-0a08d7a962ae8844b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1461797434",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07ae1c4e1fba1fc90",
            "security_group_rule_id": "sgr-06a8aced9ffb51a9c",
            "self": false,
            "source_security_group_id": "sg-097117aed2d23512a",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3991981938",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07ae1c4e1fba1fc90",
            "security_group_rule_id": "sgr-047beabf7393eec59",
            "self": false,
            "source_security_group_id": "sg-097117aed2d23512a",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-615688420",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07ae1c4e1fba1fc90",
            "security_group_rule_id": "sgr-0981f5570e388eb65",
            "self": false,
            "source_security_group_id": "sg-097117aed2d23512a",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-938382533",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07ae1c4e1fba1fc90",
            "security_group_rule_id": "sgr-029834ef9efa58cfa",
            "self": false,
            "source_security_group_id": "sg-097117aed2d23512a",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1397729038",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07ae1c4e1fba1fc90",
            "security_group_rule_id": "sgr-019a8c5fba73feaef",
            "self": false,
            "source_security_group_id": "sg-097117aed2d23512a",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-4248803517",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07ae1c4e1fba1fc90",
            "security_group_rule_id": "sgr-09792b5584e7566d9",
            "self": false,
            "source_security_group_id": "sg-097117aed2d23512a",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3641132938",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07ae1c4e1fba1fc90",
            "security_group_rule_id": "sgr-06397399fcec90977",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2561334553",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07ae1c4e1fba1fc90",
            "security_group_rule_id": "sgr-07ae92e43d70d5007",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1022721782",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-07ae1c4e1fba1fc90",
            "security_group_rule_id": "sgr-017c83fb2799b79eb",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}